Subbgraph filtering without immutables